# maria-dashboard

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
.githooks/: pre-commit
.github/workflows/: docker-image.yml
.streamlit/: config.toml
src/: main.py  settings.py  state.py
src/shared/constants/: groups_by_imc_range.py
src/shared/schemas/: user_profile_schema.py
src/shared/scripts/: console-dump-extensions.sql  console-dump-maria_console.sql
src/shared/utils/: async.py  calculate_imc.py  calculate_nps.py  get_datetime.py  get_imc_groups.py  get_user_name.py  remove_orgs.py  role_translation.py  string_formatter.py
src/ui/pages/: login.py  patients_overview.py
src/ui/pages/cemig/: patients_overview.py
src/ui/pages/maria/: indicators.py
