[project]
name = "maria-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.44.1",
    "pydantic-settings>=2.8.1",
    "watchdog>=6.0.0",
    "ruff>=0.11.5",
    "sqlalchemy[asyncio]>=2.0.40",
    "asyncpg>=0.30.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.3",
    "plotly>=6.0.1",
    "matplotlib>=3.10.1",
    "seaborn>=0.13.2",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.11.5",
]
